--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ src/.DS_Store
 src/main/.DS_Store
 src/main/java/.DS_Store
 src/main/java/moodprove/.DS_Store
+src/main/java/moodprove/calendar/google_oauth_client_secret.json
+google_calendar_oauth_link.txt
