--- a/resources/application.properties
+++ b/resources/application.properties
@@ -1,6 +1,6 @@
 #Database Configuration
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://localhost/core_test
+db.url=jdbc:mysql://localhost/mood
 db.username=root
 db.password=abc
  
