--- a/resources/application.properties
+++ b/resources/application.properties
@@ -6,7 +6,7 @@ db.password=abc
  
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.MySQLDialect
-hibernate.hbm2ddl.auto=create
+hibernate.hbm2ddl.auto=update
 #hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.show_sql=false
 hibernate.format_sql=true
