Changed ML Algorithm to Naive Bayes to receive percentages for mood

--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,5 @@ src/main/java/moodprove/google/google_oauth_client_secret.json
 google_calendar_oauth_link.txt
 src/main/java/moodprove/facebook/OAuthFacebookClientInfo.java
 src/main/java/moodprove/weather/WeatherAPIClientInfo.java
+src/main/java/moodprove/predict/mood-predict-test.arff
+src/main/java/moodprove/predict/mood-past-test.arff
